...

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view_main"
        android:name="team.y2k2.globa.main.main.MainFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_main_bottom"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_main_bottom"
        android:layout_width="match_parent"
        android:layout_height="65dp"
...
